--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
 
 header, h3{
     background-color: antiquewhite;
-    padding: 40px;
+    padding-top: 40px;
     margin: 0;
     text-align: center;
 }
@@ -40,7 +40,7 @@ h3{
 .paras1, .paras2, .paras3, .paras4{
     display: flex;
     flex-direction: column;
-    gap: 100px;
+    gap: 50px;
     margin-bottom: 100px;
 }
 
@@ -48,10 +48,17 @@ h3{
 margin-top: 0;
 }
 
-.intro .images1{
-    max-height: ;
-}
-
 .images2, .images3, .images4{
     background-color: white;
 }
+
+@media screen and (max-width: 500px){
+.intro, .body1, .body2, .body3{
+    margin-left: 0; 
+    margin-right: 0;
+    margin-top: 0;
+    }
+}
+
+
+   
